# cs336-assignment1-basics-solution

./: main.py  pyproject.toml
cs336_assignment1_basics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cs336_basics/: optimizer.py
