[project]
name = "cs336-assignment1-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "psutil>=7.1.3",
    "pytest>=9.0.1",
    "regex>=2025.11.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
